--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M/s Lamar Arts | Premium Printing Jowai</title>
+    <title>M/s Lamar Art's | Premium Printing Jowai</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -12,7 +12,6 @@
     <div id="preloader">
         <video id="intro-video" muted playsinline>
             <source src="intro-anim.mp4" type="video/mp4">
-            Your browser does not support the video tag.
         </video>
         <button id="skip-btn" onclick="closePreloader()">Skip to Site <i class="fas fa-arrow-right"></i></button>
     </div>
@@ -29,9 +28,7 @@
 
     <header>
         <div class="nav-container">
-            <a href="index.html" class="logo-link">
-                <img src="logo.png" alt="M/s Lamar Arts Logo" class="main-logo">
-            </a>
+            <a href="index.html" class="logo-text">M/s Lamar Art's</a>
             
             <div class="menu-toggle" onclick="toggleMenu()">
                 <i class="fas fa-bars"></i>
@@ -40,7 +37,8 @@
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="history.html">Our History</a></li> <li><a href="contact.html">Contact</a></li>
+                <li><a href="history.html">Our History</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
 
             <a href="https://wa.me/919862330569" class="cta-button">Get a Quote</a>
@@ -48,30 +46,37 @@
     </header>
 
     <section class="hero">
-        <div class="hero-content">
-            <span class="est-badge">Est. 1999 • Founded by Ohiwan Lamar</span>
+        <div class="hero-text">
+            <a href="history.html" class="since-badge">Est. 1999 by Ohiwan Lamar</a>
             <h1>Beyond Imagination <br>& Creativity.</h1>
             <p>From traditional granite engraving to modern digital printing. We bring a legacy of craftsmanship to West Jaintia Hills.</p>
             <div class="hero-buttons">
-                <a href="products.html" class="btn-primary">Explore Products</a>
-                <a href="history.html" class="btn-secondary">Read Our Story</a>
+                <a href="products.html" class="cta-button" style="background:var(--dark);">Explore Catalog</a>
+                <a href="history.html" style="margin-left: 20px; font-weight:600; text-decoration:underline; color: var(--primary);">Read Our Story</a>
+            </div>
+        </div>
+        <div class="hero-image-container">
+            <div class="slideshow">
+                <img src="slide1.jpg" class="slide active" alt="M/s Lamar Arts Shop">
+                <img src="slide2.jpg" class="slide" alt="Artistic Work">
+                <img src="slide3.jpg" class="slide" alt="Modern Printing">
             </div>
         </div>
     </section>
 
     <section class="features">
         <div class="feature-box">
-            <i class="fas fa-shipping-fast" style="color:#00ADEF"></i>
+            <i class="fas fa-shipping-fast" style="color:var(--cyan)"></i>
             <h3>Next Day Delivery</h3>
             <p>Order today, receive tomorrow options available.</p>
         </div>
         <div class="feature-box">
-            <i class="fas fa-globe-asia" style="color:#EC008C"></i>
+            <i class="fas fa-globe-asia" style="color:var(--magenta)"></i>
             <h3>Global Shipping</h3>
             <p>Delivering high-quality prints across India and the world.</p>
         </div>
         <div class="feature-box">
-            <i class="fas fa-star" style="color:#FFD100"></i>
+            <i class="fas fa-star" style="color:var(--yellow)"></i>
             <h3>Premium Quality</h3>
             <p>Trusted by loyal customers for over 25 years.</p>
         </div>
@@ -119,6 +124,14 @@
         </div>
     </section>
 
+    <section class="features" style="background:var(--dark); color:var(--white);">
+        <div class="section-title">
+            <h2 style="color:var(--white)">Trusted Since 1999</h2>
+            <p style="color:#aaa">See what our loyal customers say.</p>
+        </div>
+        <p>"Best quality stamps in the city. Highly recommended!" - Client A</p>
+    </section>
+
     <footer>
         <div class="footer-container">
             <div class="footer-col">
@@ -142,15 +155,15 @@
                 <h4>Contact</h4>
                 <p><i class="fab fa-whatsapp"></i> 9862330569</p>
                 <p><i class="fas fa-envelope"></i> lamararts123@gmail.com</p>
-                <p><a href="https://www.instagram.com/__lamararts__" style="color:#EC008C"><i class="fab fa-instagram"></i> @__lamararts__</a></p>
+                <p><a href="https://www.instagram.com/__lamararts__" style="color:var(--magenta)"><i class="fab fa-instagram"></i> @__lamararts__</a></p>
             </div>
 
             <div class="footer-col map-col">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3600.347589620023!2d92.21319031501435!3d25.42668598378997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3751a4b655555555%3A0x1234567890abcdef!2sJowai!5e0!3m2!1sen!2sin!4v1612345678901" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3616.947072303925!2d92.1976773!3d25.4562633!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3751aa303422561d%3A0xc5c6b14d92e666c3!2sM%2Fs%20Lamar%20Arts!5e0!3m2!1sen!2sin!4v1709999999999!5m2!1sen!2sin" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
         <div class="copyright">
-            &copy; 2026 M/s Lamar Arts. "Beyond Imagination & Creativity"
+            © 2026 M/s Lamar Art's. "Beyond Imagination & Creativity"
         </div>
     </footer>
 
