--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 
     <header>
         <div class="nav-container">
-            <a href="index.html" class="logo-text">M/s Lamar Art's</a>
+            <a href="index.html" class="logo-link">
+                <img src="logo.png" alt="Lamar Arts Logo" class="logo-icon">
+                <span class="logo-text">M/s Lamar Art's</span>
+            </a>
             
             <div class="menu-toggle" onclick="toggleMenu()">
                 <i class="fas fa-bars"></i>
@@ -55,6 +58,7 @@
                 <a href="history.html" style="margin-left: 20px; font-weight:600; text-decoration:underline; color: var(--primary);">Read Our Story</a>
             </div>
         </div>
+        
         <div class="hero-image-container">
             <div class="slideshow">
                 <img src="slide1.jpg" class="slide active" alt="M/s Lamar Arts Shop">
@@ -159,7 +163,7 @@
             </div>
 
             <div class="footer-col map-col">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3616.947072303925!2d92.1976773!3d25.4562633!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3751aa303422561d%3A0xc5c6b14d92e666c3!2sM%2Fs%20Lamar%20Arts!5e0!3m2!1sen!2sin!4v1709999999999!5m2!1sen!2sin" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3600.347589620023!2d92.21319031501435!3d25.42668598378997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3751a4b655555555%3A0x1234567890abcdef!2sJowai!5e0!3m2!1sen!2sin!4v1612345678901" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
         <div class="copyright">
