Modify social links and enhance hero section
Updated social media links and added a new slide image in the hero section.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
             <span><i class="fas fa-envelope"></i> lamararts123@gmail.com</span>
         </div>
         <div class="social-mini">
-            <a href="https://www.instagram.com/__lamararts__" target="_blank"><i class="fab fa-instagram"></i> Follow us</a>
+            <a href="https://www.facebook.com/profile.php?id=61570825532138" target="_blank" style="margin-right:15px;">
+                <i class="fab fa-facebook-f"></i> Facebook
+            </a>
+            <a href="https://www.instagram.com/__lamararts__" target="_blank">
+                <i class="fab fa-instagram"></i> Instagram
+            </a>
         </div>
     </div>
 
@@ -64,6 +69,7 @@
                 <img src="slide1.jpg" class="slide active" alt="M/s Lamar Arts Shop">
                 <img src="slide2.jpg" class="slide" alt="Artistic Work">
                 <img src="slide3.jpg" class="slide" alt="Modern Printing">
+                <img src="slide4.jpg" class="slide" alt="Lamar Arts Team">
             </div>
         </div>
     </section>
@@ -159,6 +165,8 @@
                 <h4>Contact</h4>
                 <p><i class="fab fa-whatsapp"></i> 9862330569</p>
                 <p><i class="fas fa-envelope"></i> lamararts123@gmail.com</p>
+                <br>
+                <p><a href="https://www.facebook.com/profile.php?id=61570825532138" target="_blank" style="color:white"><i class="fab fa-facebook-f"></i> Facebook Page</a></p>
                 <p><a href="https://www.instagram.com/__lamararts__" style="color:var(--magenta)"><i class="fab fa-instagram"></i> @__lamararts__</a></p>
             </div>
 
