Fix HTML formatting and clean up index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 <body>
 
+    <div id="intro-overlay">
+        <div class="intro-content">
+            <div class="intro-icons">
+                <i class="fas fa-paint-brush intro-icon" id="icon-brush"></i>
+                <i class="fas fa-monument intro-icon" id="icon-stone"></i>
+            </div>
+            <h1 class="intro-text">M/s Lamar <span>Arts</span></h1>
+            <p class="intro-tagline">Since 1999</p>
+        </div>
+    </div>
+
     <header>
         <div class="nav-container">
             <a href="index.html" class="logo">M/s Lamar <span>Arts</span></a>
@@ -21,7 +32,7 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
 
-            <a href="https://wa.me/YOURNUMBER" class="cta-button">Get a Quote</a>
+            <a href="contact.html" class="cta-button">Get a Quote</a>
         </div>
     </header>
 
@@ -59,50 +70,5 @@
         </div>
     </section>
 
-    <section class="product-section">
-        <div class="section-title">
-            <h2>Core Services</h2>
-            <p>The foundation of Lamar Arts. Industrial & Heavy Duty.</p>
-        </div>
-
-        <p class="service-quote">"Deals in all kinds of printing"</p>
+    <section class="
         
-        <div class="product-grid">
-            <div class="product-card">
-                <div class="card-image"><i class="fas fa-monument fa-3x" style="color:#ccc"></i></div>
-                <div class="card-info">
-                    <h3>Memorial Stones</h3>
-                    <span>Granite Engraving</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="card-image"><i class="fas fa-bullhorn fa-3x" style="color:#ccc"></i></div>
-                <div class="card-info">
-                    <h3>Signboards & Glowsigns</h3>
-                    <span>3D Acrylic & LED</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="card-image"><i class="fas fa-print fa-3x" style="color:#ccc"></i></div>
-                <div class="card-info">
-                    <h3>Large Format Flex</h3>
-                    <span>Banners & Hoardings</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="card-image"><i class="fas fa-stamp fa-3x" style="color:#ccc"></i></div>
-                <div class="card-info">
-                    <h3>Official Stamps</h3>
-                    <span>Rubber & Self-Inking</span>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    ```
-
-### What's Next?
-The "History" page is going to be very important for this site. Since we have the line *"What began with a brush and stone..."*, we need to make sure the History page visualizes that journey.
-
-**Shall we outline the content for the `history.html` page next, focusing on the timeline of Ohiwan Lamar?**
-    
