Homepage index last Revise index.html with updated content and layout
Updated content and structure of the index.html file, including changes to the hero section, features, product sections, and footer.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
         </video>
     </div>
 
-        </div>
-    </div>
-
     <header>
         <div class="nav-container">
             <a href="index.html" class="logo-link">
@@ -44,7 +41,7 @@
         <div class="hero-text">
             <a href="history.html" class="since-badge">Est. 1999 by Ohiwan Lamar</a>
             <h1>Beyond Imagination <br>& Creativity.</h1>
-            <p>“What began with a brush and stone grew into a living print legacy.”</p>
+            <p>What began with a brush and stone grew into a living print legacy. We bring a legacy of craftsmanship to West Jaintia Hills.</p>
             <div class="hero-buttons">
                 <a href="products.html" class="cta-button" style="background:var(--dark);">Explore Catalog</a>
                 <a href="history.html" style="margin-left: 20px; font-weight:600; text-decoration:underline; color: var(--primary);">Read Our Story</a>
@@ -75,7 +72,7 @@
         <div class="feature-box">
             <i class="fas fa-star" style="color:var(--yellow)"></i>
             <h3>Premium Quality</h3>
-            <p>Trusted by loyal customers for years.</p>
+            <p>Trusted by loyal customers for over 25 years.</p>
         </div>
     </section>
 
@@ -121,12 +118,19 @@
         </div>
     </section>
 
-    <section class="features" style="background:var(--dark); color:var(--white);">
-        <div class="section-title">
+    <section class="features" style="background:var(--dark); color:var(--white); flex-direction: column;">
+        <div class="section-title" style="margin-bottom: 20px;">
             <h2 style="color:var(--white)">Trusted Since 1999</h2>
-            <p style="color:#aaa">See what our loyal customers say.</p>
         </div>
-        <p>"Best quality stamps in the city. Highly recommended!" - Client A</p>
+        
+        <div class="service-quote">
+            "Deals in all kinds of printing."
+        </div>
+
+        <div style="background: rgba(255,255,255,0.1); padding: 20px; border-radius: 8px; max-width: 600px; margin: 0 auto;">
+            <p style="font-style: italic; margin-bottom: 10px;">"I have been visiting M/s Lamar Arts for years. Their quality, especially regarding stamps and engravings, is unmatched in the city. Highly recommended!"</p>
+            <p style="font-weight: bold; color: var(--primary); margin-top: 10px;">- A Loyal Customer</p>
+        </div>
     </section>
 
     <footer>
@@ -140,33 +144,5 @@
                     Meghalaya - 793150 (Near Petrol Pump)
                 </div>
                 <br>
-                <div class="address-box">
-                    <strong>Shop 2:</strong><br>
-                    M/s Lamar Arts, Iawmusiang Jowai,<br>
-                    West Jaintia Hills, Meghalaya - 793150<br>
-                    (Opp. Iaphi Complex Building)
-                </div>
-            </div>
 
-            <div class="footer-col">
-                <h4>Contact</h4>
-                <p><i class="fab fa-whatsapp"></i> 9862330569</p>
-                <p><i class="fas fa-envelope"></i> lamararts123@gmail.com</p>
-                <br>
-                <p><a href="https://www.facebook.com/profile.php?id=61570825532138" target="_blank" style="color:white"><i class="fab fa-facebook-f"></i> Facebook Page</a></p>
-                <p><a href="https://www.instagram.com/__lamararts__" style="color:var(--magenta)"><i class="fab fa-instagram"></i> @__lamararts__</a></p>
-            </div>
-
-            <div class="footer-col map-col">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3600.347589620023!2d92.21319031501435!3d25.42668598378997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3751a4b655555555%3A0x1234567890abcdef!2sJowai!5e0!3m2!1sen!2sin!4v1612345678901" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-        </div>
-        <div class="copyright">
-            © 2026 M/s Lamar Art's. "Beyond Imagination & Creativity"
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
-</body>
-</html>
-
+                
