Restore index.html to original state

--- a/index.html
+++ b/index.html
@@ -13,20 +13,8 @@
         <video id="intro-video" muted playsinline>
             <source src="intro-anim.mp4" type="video/mp4">
         </video>
-        <button id="skip-btn" onclick="closePreloader()">Skip to Site <i class="fas fa-arrow-right"></i></button>
     </div>
 
-    <div class="top-bar">
-        <div class="contact-mini">
-            <span><i class="fab fa-whatsapp"></i> 9862330569</span>
-            <span><i class="fas fa-envelope"></i> lamararts123@gmail.com</span>
-        </div>
-        <div class="social-mini">
-            <a href="https://www.facebook.com/profile.php?id=61570825532138" target="_blank" style="margin-right:15px;">
-                <i class="fab fa-facebook-f"></i> Facebook
-            </a>
-            <a href="https://www.instagram.com/__lamararts__" target="_blank">
-                <i class="fab fa-instagram"></i> Instagram
             </a>
         </div>
     </div>
@@ -57,7 +45,7 @@
         <div class="hero-text">
             <a href="history.html" class="since-badge">Est. 1999 by Ohiwan Lamar</a>
             <h1>Beyond Imagination <br>& Creativity.</h1>
-            <p>From traditional granite engraving to modern digital printing. We bring a legacy of craftsmanship to West Jaintia Hills.</p>
+            <p>“What began with a brush and stone grew into a living print legacy.”</p>
             <div class="hero-buttons">
                 <a href="products.html" class="cta-button" style="background:var(--dark);">Explore Catalog</a>
                 <a href="history.html" style="margin-left: 20px; font-weight:600; text-decoration:underline; color: var(--primary);">Read Our Story</a>
@@ -139,7 +127,7 @@
             <h2 style="color:var(--white)">Trusted Since 1999</h2>
             <p style="color:#aaa">See what our loyal customers say.</p>
         </div>
-        <p>"Best quality stamps in the city. Highly recommended!" - Client A</p>
+        <p>"Best quality stamps in the Jowai. Highly recommended!" - Sniawki A</p>
     </section>
 
     <footer>
@@ -182,3 +170,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
