--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M/s Lamar Art's | Premium Printing Jowai</title>
+    <title>M/s LAMAR ART's | Premium Printing Jowai</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -23,7 +23,7 @@
         <div class="nav-container">
             <a href="index.html" class="logo-link">
                 <img src="logo.png" alt="Lamar Arts Logo" class="logo-icon">
-                <span class="logo-text">M/s Lamar Art's</span>
+                <span class="logo-text">M/s LAMAR ART's</span>
             </a>
             
             <div class="menu-toggle" onclick="toggleMenu()">
@@ -170,4 +170,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
