--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>M/s LAMAR ART's | Premium Printing Jowai</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -170,5 +171,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
