--- a/products.html
+++ b/products.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products | M/s LAMAR ART's</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="products.css">
@@ -200,61 +201,26 @@
         </section>
     </div>
 
-    </div> <section class="insta-studio">
-        <div class="insta-header">
-            <h3><i class="fab fa-instagram"></i> Fresh From The Studio</h3>
-            <p>Explore our latest commissions, daily drops, and behind-the-scenes.</p>
+   <section class="insta-studio">
+    <div class="insta-header">
+        <h3 class="script-font">Fresh from the studio</h3> 
+        <p>Explore our latest commissions, daily drops, and behind-the-scenes.</p>
+    </div>
+
+    <div class="masonry-grid">
+        <a href="https://www.instagram.com/p/DJ7DcZNvkfW/" target="_blank" class="insta-item hero-item">
+            <img src="images/ig_portrait.jpg" alt="Granite Portrait">
+            <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
+        </a>
         </div>
 
-        <div class="masonry-grid">
-            <a href="https://www.instagram.com/p/DJ7DcZNvkfW/" target="_blank" class="insta-item hero-item">
-                <img src="images/ig_portrait.jpg" alt="Granite Portrait">
-                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
-            </a>
-
-            <a href="https://www.instagram.com/p/DJ7DGcjvsGr/" target="_blank" class="insta-item">
-                <img src="images/ig_letter.jpg" alt="Letter Engraving">
-                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
-            </a>
-
-            <a href="https://www.instagram.com/p/Cxkl0w8pcp9/" target="_blank" class="insta-item">
-                <img src="images/ig_wood.jpg" alt="Wooden Frame">
-                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
-            </a>
-
-            <a href="https://www.instagram.com/p/CoFSVgOt1Jz/" target="_blank" class="insta-item">
-                <img src="images/ig_phone.jpg" alt="Phone Cover">
-                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
-            </a>
-
-            <a href="https://www.instagram.com/p/CfjMwkVp3Sp/" target="_blank" class="insta-item">
-                <img src="images/ig_plate.jpg" alt="Plate Printing">
-                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
-            </a>
-
-            <a href="https://www.instagram.com/p/CdrMQGqPGE8/" target="_blank" class="insta-item">
-                <img src="images/ig_bottle.jpg" alt="Printed Bottle">
-                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
-            </a>
-
-            <a href="https://www.instagram.com/p/CRowXV0lvf5/" target="_blank" class="insta-item">
-                <img src="images/ig_mug.jpg" alt="Printed Mug">
-                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
-            </a>
-
-            <a href="https://www.instagram.com/p/CfjNG0upvzi/" target="_blank" class="insta-item">
-                <img src="images/ig_keychain.jpg" alt="Keychain">
-                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
-            </a>
-        </div>
-
-        <div class="insta-cta">
-            <p>Can't find the design you want?</p>
-            <a href="https://www.instagram.com/__lamararts__" target="_blank" class="ig-btn">
-                Browse 100+ More Designs on Instagram <i class="fas fa-arrow-right"></i>
-            </a>
-        </div>
-    </section>
+    <div class="insta-cta">
+        <p>Can't find the design you want?</p>
+        <a href="https://www.instagram.com/__lamararts__" target="_blank" class="ig-btn">
+            See what we created today on Instagram <i class="fas fa-arrow-right"></i>
+        </a>
+    </div>
+</section>
 
 
     <section class="services-strip">
@@ -335,4 +301,5 @@
     <script src="products.js"></script>
 </body>
 </html>
+
 
