--- a/products.html
+++ b/products.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products | M/s LAMAR ART's</title>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="products.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Cinzel+Decorative:wght@400;700;900&family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Playfair+Display:wght@600;700&family=Cinzel+Decorative:wght@400;700;900&family=Inter:wght@300;400;600;800&family=Montserrat:wght@700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -92,7 +91,6 @@
                     <img src="images/self-round.jpg" alt="Self Inking Round">
                     <div class="item-info"><h4>Self-Inking (Round)</h4><a href="https://wa.me/919862330569?text=Hi,%20price%20for%20Self-Inking%20Round?" class="order-link">Order</a></div>
                 </div>
-
                 <div class="menu-item" data-category="flex">
                     <img src="images/flex-normal.jpg" alt="Normal Flex">
                     <div class="item-info"><h4>Normal Flex</h4><a href="https://wa.me/919862330569?text=Hi,%20quote%20for%20Normal%20Flex" class="order-link">Order</a></div>
@@ -101,7 +99,6 @@
                     <img src="images/flex-star.jpg" alt="Star Flex">
                     <div class="item-info"><h4>Star Flex (Premium)</h4><a href="https://wa.me/919862330569?text=Hi,%20quote%20for%20Star%20Flex" class="order-link">Order</a></div>
                 </div>
-
                 <div class="menu-item" data-category="signage">
                     <img src="images/sign-normal.jpg" alt="Normal Signboard">
                     <div class="item-info"><h4>Normal Signboard</h4><a href="https://wa.me/919862330569?text=Hi,%20quote%20for%20Normal%20Signboard" class="order-link">Order</a></div>
@@ -122,7 +119,6 @@
                     <img src="images/radium.jpg" alt="Radium Stickers">
                     <div class="item-info"><h4>Radium Stickers</h4><a href="https://wa.me/919862330569?text=Hi,%20quote%20for%20Radium%20Stickers" class="order-link">Order</a></div>
                 </div>
-
                 <div class="menu-item" data-category="print">
                     <img src="images/cards.jpg" alt="Business Cards">
                     <div class="item-info"><h4>Business Cards</h4><a href="https://wa.me/919862330569?text=Hi,%20I%20need%20Business%20Cards" class="order-link">Order</a></div>
@@ -150,7 +146,6 @@
             </div>
 
             <div class="menu-grid" id="gifting-grid">
-                
                 <div class="menu-item" data-category="stone">
                     <img src="images/granite-text.jpg" alt="Granite Text">
                     <div class="item-info"><h4>Granite Memorial (Text)</h4><a href="https://wa.me/919862330569?text=Hi,%20quote%20for%20Granite%20Text%20Only" class="order-link">Enquire</a></div>
@@ -163,7 +158,6 @@
                     <img src="images/woodframe.jpg" alt="Wood Frame">
                     <div class="item-info"><h4>Engraved Wood Frame</h4><a href="https://wa.me/919862330569?text=Hi,%20quote%20for%20Wood%20Frame" class="order-link">Order</a></div>
                 </div>
-
                 <div class="menu-item" data-category="merch">
                     <img src="images/tshirt.jpg" alt="Tshirt">
                     <div class="item-info"><h4>Custom T-Shirts</h4><a href="https://wa.me/919862330569?text=Hi,%20I%20want%20to%20print%20Tshirts" class="order-link">Order</a></div>
@@ -184,7 +178,6 @@
                     <img src="images/mousepad.jpg" alt="Mousepad">
                     <div class="item-info"><h4>Mouse Pads</h4><a href="https://wa.me/919862330569?text=Hi,%20price%20for%20Mousepad" class="order-link">Order</a></div>
                 </div>
-
                 <div class="menu-item" data-category="decor">
                     <img src="images/ledframe.jpg" alt="LED Frame">
                     <div class="item-info"><h4>LED Acrylic Frame</h4><a href="https://wa.me/919862330569?text=Hi,%20quote%20for%20LED%20Frame" class="order-link">Order</a></div>
@@ -201,51 +194,62 @@
         </section>
     </div>
 
-   <section class="insta-studio">
-    <div class="insta-header">
-        <h3 class="script-font">Fresh from the studio</h3> 
-        <p>Explore our latest commissions, daily drops, and behind-the-scenes.</p>
-    </div>
-
-    <div class="masonry-grid">
-        <a href="https://www.instagram.com/p/DJ7DcZNvkfW/" target="_blank" class="insta-item hero-item">
-            <img src="images/ig_portrait.jpg" alt="Granite Portrait">
-            <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
-        </a>
+    <section class="insta-studio">
+        <div class="insta-header">
+            <h3 class="script-font">Fresh from the studio</h3> 
+            <p>Explore our latest commissions, daily drops, and behind-the-scenes.</p>
         </div>
 
-    <div class="insta-cta">
-        <p>Can't find the design you want?</p>
-        <a href="https://www.instagram.com/__lamararts__" target="_blank" class="ig-btn">
-            See what we created today on Instagram <i class="fas fa-arrow-right"></i>
-        </a>
-    </div>
-</section>
+        <div class="masonry-grid">
+            <a href="https://www.instagram.com/p/DJ7DcZNvkfW/" target="_blank" class="insta-item hero-item">
+                <img src="images/ig_portrait.jpg" alt="Granite Portrait">
+                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
+            </a>
+            <a href="https://www.instagram.com/p/DJ7DGcjvsGr/" target="_blank" class="insta-item">
+                <img src="images/ig_letter.jpg" alt="Letter Engraving">
+                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
+            </a>
+            <a href="https://www.instagram.com/p/Cxkl0w8pcp9/" target="_blank" class="insta-item">
+                <img src="images/ig_wood.jpg" alt="Wooden Frame">
+                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
+            </a>
+            <a href="https://www.instagram.com/p/CoFSVgOt1Jz/" target="_blank" class="insta-item">
+                <img src="images/ig_phone.jpg" alt="Phone Cover">
+                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
+            </a>
+            <a href="https://www.instagram.com/p/CfjMwkVp3Sp/" target="_blank" class="insta-item">
+                <img src="images/ig_plate.jpg" alt="Plate Printing">
+                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
+            </a>
+            <a href="https://www.instagram.com/p/CdrMQGqPGE8/" target="_blank" class="insta-item">
+                <img src="images/ig_bottle.jpg" alt="Printed Bottle">
+                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
+            </a>
+            <a href="https://www.instagram.com/p/CRowXV0lvf5/" target="_blank" class="insta-item">
+                <img src="images/ig_mug.jpg" alt="Printed Mug">
+                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
+            </a>
+            <a href="https://www.instagram.com/p/CfjNG0upvzi/" target="_blank" class="insta-item">
+                <img src="images/ig_keychain.jpg" alt="Keychain">
+                <div class="insta-overlay"><i class="fas fa-heart"></i> View Post</div>
+            </a>
+        </div>
 
+        <div class="insta-cta">
+            <p>Can't find the design you want?</p>
+            <a href="https://www.instagram.com/__lamararts__" target="_blank" class="ig-btn">
+                See what we created today on Instagram <i class="fas fa-arrow-right"></i>
+            </a>
+        </div>
+    </section>
 
     <section class="services-strip">
         <h3>Beyond Printing</h3>
         <div class="service-grid">
-            <div class="svc-card">
-                <i class="fas fa-tools"></i>
-                <h4>Installation</h4>
-                <p>On-site fixing for Signboards & Banners.</p>
-            </div>
-            <div class="svc-card">
-                <i class="fas fa-magic"></i>
-                <h4>Restoration</h4>
-                <p>We repair old/damaged photos digitally.</p>
-            </div>
-            <div class="svc-card">
-                <i class="fas fa-paste"></i>
-                <h4>Vinyl Pasting</h4>
-                <p>Bubble-free pasting for glass & vehicles.</p>
-            </div>
-            <div class="svc-card">
-                <i class="fas fa-shipping-fast"></i>
-                <h4>Global Shipping</h4>
-                <p>We courier lightweight items worldwide.</p>
-            </div>
+            <div class="svc-card"><i class="fas fa-tools"></i><h4>Installation</h4><p>On-site fixing for Signboards & Banners.</p></div>
+            <div class="svc-card"><i class="fas fa-magic"></i><h4>Restoration</h4><p>We repair old/damaged photos digitally.</p></div>
+            <div class="svc-card"><i class="fas fa-paste"></i><h4>Vinyl Pasting</h4><p>Bubble-free pasting for glass & vehicles.</p></div>
+            <div class="svc-card"><i class="fas fa-shipping-fast"></i><h4>Global Shipping</h4><p>We courier lightweight items worldwide.</p></div>
         </div>
     </section>
 
@@ -269,17 +273,11 @@
             <div class="footer-col">
                 <h4><i class="fas fa-map-marker-alt"></i> Visit Us</h4>
                 <div class="address-box">
-                    <strong>Shop 1:</strong><br>
-                    M/s Lamar Arts Newhill,<br>
-                    Loomsooiung Jowai, West Jaintia Hills,<br>
-                    Meghalaya - 793150 (Near Petrol Pump)
+                    <strong>Shop 1:</strong><br>M/s Lamar Arts Newhill,<br>Loomsooiung Jowai, West Jaintia Hills,<br>Meghalaya - 793150 (Near Petrol Pump)
                 </div>
                 <br>
                 <div class="address-box">
-                    <strong>Shop 2:</strong><br>
-                    M/s Lamar Arts, Iawmusiang Jowai,<br>
-                    West Jaintia Hills, Meghalaya - 793150<br>
-                    (Opp. Iaphi Complex Building)
+                    <strong>Shop 2:</strong><br>M/s Lamar Arts, Iawmusiang Jowai,<br>West Jaintia Hills, Meghalaya - 793150<br>(Opp. Iaphi Complex Building)
                 </div>
             </div>
             <div class="footer-col">
@@ -301,5 +299,3 @@
     <script src="products.js"></script>
 </body>
 </html>
-
-
