--- a/products.html
+++ b/products.html
@@ -252,7 +252,7 @@
         <div class="insta-cta">
             <p>Can't find the design you want?</p>
             <a href="https://www.instagram.com/__lamararts__" target="_blank" class="ig-btn">
-                Browse 100+ More Designs on Instagram <i class="fas fa-arrow-right"></i>
+                Browse More Products on Instagram <i class="fas fa-arrow-right"></i>
             </a>
         </div>
     </section>
@@ -335,3 +335,4 @@
     <script src="products.js"></script>
 </body>
 </html>
+
