--- a/index.html
+++ b/index.html
@@ -87,26 +87,34 @@
             <p>Industrial & Heavy Duty Solutions</p>
         </div>
         <div class="product-grid">
-            <div class="card">
-                <i class="fas fa-monument icon-bg"></i>
-                <h3>Memorial Stones</h3>
-                <p>Expert Granite Engraving</p>
-            </div>
-            <div class="card">
-                <i class="fas fa-lightbulb icon-bg"></i>
-                <h3>Signboards</h3>
-                <p>Glowsign, LED & 3D Acrylic</p>
-            </div>
-            <div class="card">
-                <i class="fas fa-scroll icon-bg"></i>
-                <h3>Flex & Banners</h3>
-                <p>Vinyl, Sunboard & Hoardings</p>
-            </div>
-            <div class="card">
-                <i class="fas fa-stamp icon-bg"></i>
-                <h3>Official Stamps</h3>
-                <p>Rubber & Self-Inking Solutions</p>
-            </div>
+            <a href="products.html#business-zone" class="card card-memorial">
+                <div class="card-overlay">
+                    <i class="fas fa-monument"></i>
+                    <h3>Memorial Stones</h3>
+                    <p>Expert Granite Engraving</p>
+                </div>
+            </a>
+            <a href="products.html#business-zone" class="card card-signboard">
+                <div class="card-overlay">
+                    <i class="fas fa-lightbulb"></i>
+                    <h3>Signboards</h3>
+                    <p>Glowsign, LED & 3D Acrylic</p>
+                </div>
+            </a>
+            <a href="products.html#business-zone" class="card card-flex">
+                <div class="card-overlay">
+                    <i class="fas fa-scroll"></i>
+                    <h3>Flex & Banners</h3>
+                    <p>Vinyl, Sunboard & Hoardings</p>
+                </div>
+            </a>
+            <a href="products.html#business-zone" class="card card-stamp">
+                <div class="card-overlay">
+                    <i class="fas fa-stamp"></i>
+                    <h3>Official Stamps</h3>
+                    <p>Rubber & Self-Inking</p>
+                </div>
+            </a>
         </div>
     </section>
 
@@ -116,10 +124,30 @@
             <p>Personalized Gifts & Merchandise</p>
         </div>
         <div class="product-grid">
-            <div class="card"><h3>Laser Engraving</h3><p>Acrylic & Wood</p></div>
-            <div class="card"><h3>Custom T-Shirts</h3><p>Sublimation & Heat Press</p></div>
-            <div class="card"><h3>Anime Posters</h3><p>High Gloss Prints</p></div>
-            <div class="card"><h3>Stickers</h3><p>Custom Vinyl Cuts</p></div>
+            <a href="products.html#gifting-zone" class="card card-laser">
+                <div class="card-overlay">
+                    <h3>Laser Engraving</h3>
+                    <p>Acrylic & Wood</p>
+                </div>
+            </a>
+            <a href="products.html#gifting-zone" class="card card-tshirt">
+                <div class="card-overlay">
+                    <h3>Custom T-Shirts</h3>
+                    <p>Sublimation & Heat Press</p>
+                </div>
+            </a>
+            <a href="products.html#gifting-zone" class="card card-poster">
+                <div class="card-overlay">
+                    <h3>Anime Posters</h3>
+                    <p>High Gloss Prints</p>
+                </div>
+            </a>
+            <a href="products.html#gifting-zone" class="card card-sticker">
+                <div class="card-overlay">
+                    <h3>Stickers</h3>
+                    <p>Custom Vinyl Cuts</p>
+                </div>
+            </a>
         </div>
     </section>
 
