--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap" rel="stylesheet">
+    <li><a href="gallery.html">Gallery</a></li> 
 </head>
 <body>
 
@@ -199,6 +200,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
